# fresh-cart

./: .env.sample  .gitignore  .gitlab-ci.yml  .update.sh  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  nose2.cfg  pyproject.toml
backend/: Dockerfile  nose2.cfg  pyproject.toml
backend/freshcart/: app.py
backend/freshcart/lib/: chatbot.py  contexts.py  db.py  embedder.py  logger.py  session.py  stream_utils.py
backend/freshcart/lib/ai/: llm_adapter.py
backend/freshcart/lib/models/: __init__.py  products.py  sessions.py
backend/freshcart/scripts/: embed.py
backend/freshcart/tests/: __init__.py  app_test.py
backend/freshcart/tests/lib/: db_test.py  embedder_test.py  session_test.py
backend/freshcart/tests/lib/models/: products_test.py
backend/migrations/: env.py
backend/migrations/versions/: 0e3c4b14fb40_add_products_table.py  15f95019d26b_remove_quantity_from_products_model.py  25f7873ec0a6_remove_documents.py  6835574a8f98_add_function_to_search_embeddings.py  ab165c8630f7_add_quantity_and_price_column_to_.py  b6bc0f62f96b_add_embedding_to_products.py  bae4c1f2ba5a_add_sessions_table.py
client/: angular.json  karma.conf.js  package.json  proxy.conf.json  tailwind.config.js
client/src/: index.html
db/: products-sample.sql  products.sql
docker/nginx/: default.conf
frontend/: .dockerignore  .gitignore  Dockerfile  angular.json  package.json  proxy.conf.json
frontend/src/: styles.scss
lib/: contexts.py  db.py  session.py
lib/ai/: models.py
lib/models/: __init__.py  documents.py  products.py
migrations/: env.py
scripts/: __init__.py  embeddings.py
tests/: __init__.py  app_test.py
tests/lib/: contexts_test.py  (+2 more)
(+61 files in other folders)
